# Kinetic-LinuxDE

./: .gitignore  CMakeLists.txt  LICENSE  README.md  input.c  main.c  window.c
src/compositor/: input.h  kinetic-compositor  main.c  server.h  window.h
src/shell/panel/: main.cpp
